Pull up following revision(s) (requested by mrg in ticket #851):

sys/external/bsd/drm2/nouveau/nouveau_pci.c: revision 1.9-1.11

disable drm2 on modern nouveau cards (Pascal-based).

our older drm doesn't have any support for modern Pascal or
the second version of Maxwell (but not disabled here yet)
but the driver tries to attach on any nvidia gpu.
this should workaround PR#53258, and other issues reported
with modern nvidia chipsets.

XXX: pullup-7, pullup-8.

-

disable matching nouveau on pascal and the second generation of maxwell
cards that are not supported by this version of drm.
this should fix various modern systems vs nvidia issues, eg PR 53188.

XXX: pullup-7, pullup-8.

 -

the previous change doubled the check for pascal.  fix it so
that we only check for later maxwell and pascal once each,
as intended.